--- a/frontend/pages/Create New Audit.html
+++ b/frontend/pages/Create New Audit.html
@@ -81,7 +81,7 @@
                 <div class="flex items-center justify-end gap-3">
                     <button
                         class="px-4 py-2.5 rounded text-xs font-medium text-slate-600 hover:text-slate-900 hover:bg-slate-100 transition-colors"
-                        onclick="window.location.href='Dashboard_Homepage.html'">
+                        onclick="window.location.href='/pages/Dashboard_Homepage.html'">
                         Cancel
                     </button>
                     <button id="start-btn" onclick="startAudit()"
