--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -76,7 +76,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
-                <a href="#" onclick="router('/')" class="flex items-center gap-2 group">
+                <a href="index.html" class="flex items-center gap-2 group">
                     <div
                         class="w-8 h-8 bg-slate-900 rounded text-white flex items-center justify-center group-hover:scale-105 transition-transform duration-200">
                         <span class="iconify" data-icon="lucide:scan-eye" data-width="18"
@@ -87,9 +87,9 @@
 
                 <!-- Desktop Links -->
                 <div class="hidden md:flex space-x-8 items-center">
-                    <a href="#" onclick="router('#how-it-works')"
-                        class="text-sm text-slate-600 hover:text-slate-900 transition-colors">How It Works</a>
-                    <a href="#" onclick="router('#features')"
+                    <a href="#how-it-works" class="text-sm text-slate-600 hover:text-slate-900 transition-colors">How It
+                        Works</a>
+                    <a href="#features"
                         class="text-sm text-slate-600 hover:text-slate-900 transition-colors">Features</a>
                     <a href="Pricing.html"
                         class="text-sm text-slate-600 hover:text-slate-900 transition-colors">Pricing</a>
@@ -225,7 +225,7 @@
                     <h4 class="font-semibold text-sm mb-4">Product</h4>
                     <ul class="space-y-2 text-sm text-slate-500">
                         <li><a href="Pricing.html" class="hover:text-slate-900">Pricing</a></li>
-                        <li><a href="#" onclick="router('#features')" class="hover:text-slate-900">Features</a></li>
+                        <li><a href="#features" class="hover:text-slate-900">Features</a></li>
                         <li><a href="Dashboard_Homepage.html" class="hover:text-slate-900">Dashboard</a></li>
                     </ul>
                 </div>
@@ -467,12 +467,12 @@
                 <h2 class="text-3xl font-semibold tracking-tight text-slate-900 mb-6">Ready to optimize your user
                     experience?</h2>
                 <div class="flex justify-center gap-4">
-                    <button onclick="router('/dashboard/new')"
+                    <a href="Create New Audit.html"
                         class="bg-slate-900 hover:bg-slate-800 text-white font-medium px-6 py-3 rounded-md shadow-lg transition-all">Start
-                        Your First UX Audit</button>
-                    <button onclick="router('/dashboard')"
+                        Your First UX Audit</a>
+                    <a href="Dashboard_Homepage.html"
                         class="bg-white hover:bg-slate-50 text-slate-900 border border-slate-200 font-medium px-6 py-3 rounded-md transition-all">Go
-                        to Dashboard</button>
+                        to Dashboard</a>
                 </div>
             </div>
         </section>
@@ -500,9 +500,9 @@
                             <span class="text-4xl font-bold tracking-tight">$0</span>
                             <span class="text-slate-500 text-sm">/month</span>
                         </div>
-                        <button onclick="router('/signup')"
+                        <a href="Signup.html"
                             class="w-full bg-slate-50 hover:bg-slate-100 text-slate-900 font-medium py-2 rounded-md border border-slate-200 transition-colors mb-8 text-sm">Get
-                            Started Free</button>
+                            Started Free</a>
                         <ul class="space-y-3 text-sm text-slate-600 flex-1">
                             <li class="flex gap-2"><span class="iconify text-slate-400" data-icon="lucide:check"></span>
                                 1 website audit/mo</li>
@@ -526,9 +526,9 @@
                             <span class="text-4xl font-bold tracking-tight">$10</span>
                             <span class="text-slate-500 text-sm">/month</span>
                         </div>
-                        <button onclick="router('/signup')"
+                        <a href="Signup.html"
                             class="w-full bg-slate-900 hover:bg-slate-800 text-white font-medium py-2 rounded-md transition-colors mb-8 text-sm">Start
-                            Auditing</button>
+                            Auditing</a>
                         <ul class="space-y-3 text-sm text-slate-600 flex-1">
                             <li class="flex gap-2"><span class="iconify text-slate-900" data-icon="lucide:check"></span>
                                 10 audits/mo</li>
@@ -557,9 +557,9 @@
                             <span class="text-4xl font-bold tracking-tight">$29</span>
                             <span class="text-slate-500 text-sm">/month</span>
                         </div>
-                        <button onclick="router('/signup')"
+                        <a href="Signup.html"
                             class="w-full bg-slate-900 hover:bg-slate-800 text-white font-medium py-2 rounded-md transition-colors mb-8 text-sm shadow-md">Power
-                            Your UX Workflow</button>
+                            Your UX Workflow</a>
                         <ul class="space-y-3 text-sm text-slate-600 flex-1">
                             <li class="flex gap-2"><span class="iconify text-emerald-600"
                                     data-icon="lucide:check"></span> 30 audits/mo</li>
@@ -636,7 +636,7 @@
                     </form>
 
                     <div class="mt-6 text-center">
-                        <p class="text-sm text-slate-500">Don't have an account? <a href="#" onclick="router('/signup')"
+                        <p class="text-sm text-slate-500">Don't have an account? <a href="Signup.html"
                                 class="font-medium text-slate-900 hover:underline">Sign up</a></p>
                     </div>
                 </div>
@@ -651,7 +651,7 @@
             <div class="bg-white border-b border-slate-200">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div class="flex space-x-8 -mb-px">
-                        <a href="#" onclick="router('/dashboard')"
+                        <a href="Dashboard_Homepage.html"
                             class="border-b-2 border-slate-900 py-4 px-1 text-sm font-medium text-slate-900">Overview</a>
                         <a href="#" onclick="router('/dashboard/reports')"
                             class="border-b-2 border-transparent hover:border-slate-300 py-4 px-1 text-sm font-medium text-slate-500 hover:text-slate-700 transition-colors">Reports</a>
@@ -672,11 +672,11 @@
     <template id="tpl-dash-overview">
         <div class="flex justify-between items-center mb-8">
             <h1 class="text-2xl font-semibold tracking-tight text-slate-900">Dashboard</h1>
-            <button onclick="router('/dashboard/new')"
+            <a href="Create New Audit.html"
                 class="bg-slate-900 hover:bg-slate-800 text-white text-sm font-medium px-4 py-2 rounded-md shadow-sm transition-all flex items-center gap-2">
                 <span class="iconify" data-icon="lucide:plus" data-width="16"></span>
                 Run New Audit
-            </button>
+            </a>
         </div>
 
         <!-- Stats -->
@@ -771,7 +771,7 @@
     <!-- 6. NEW AUDIT -->
     <template id="tpl-new-audit">
         <div class="max-w-2xl mx-auto">
-            <a href="#" onclick="router('/dashboard')"
+            <a href="Dashboard_Homepage.html"
                 class="flex items-center text-sm text-slate-500 hover:text-slate-900 mb-6">
                 <span class="iconify mr-1" data-icon="lucide:arrow-left" data-width="16"></span> Back to dashboard
             </a>
@@ -833,7 +833,7 @@
     <template id="tpl-audit-results">
         <div class="mb-6 flex flex-col sm:flex-row sm:items-center justify-between gap-4">
             <div>
-                <a href="#" onclick="router('/dashboard')"
+                <a href="Dashboard_Homepage.html"
                     class="flex items-center text-sm text-slate-500 hover:text-slate-900 mb-2">
                     <span class="iconify mr-1" data-icon="lucide:arrow-left" data-width="16"></span> Back to dashboard
                 </a>
@@ -848,11 +848,11 @@
                 <button
                     class="bg-white border border-slate-200 text-slate-700 hover:bg-slate-50 text-sm font-medium px-4 py-2 rounded-md transition-colors flex items-center gap-2">
                     <span class="iconify" data-icon="lucide:share-2" data-width="14"></span> Share
-                </button>
-                <button
-                    class="bg-slate-900 hover:bg-slate-800 text-white text-sm font-medium px-4 py-2 rounded-md shadow-sm transition-colors flex items-center gap-2">
-                    <span class="iconify" data-icon="lucide:download" data-width="14"></span> Download Report
-                </button>
+                    </a>
+                    <button
+                        class="bg-slate-900 hover:bg-slate-800 text-white text-sm font-medium px-4 py-2 rounded-md shadow-sm transition-colors flex items-center gap-2">
+                        <span class="iconify" data-icon="lucide:download" data-width="14"></span> Download Report
+                        </a>
             </div>
         </div>
 
