--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -85,30 +85,49 @@
                     <span class="font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
                 </a>
 
-                <!-- Desktop Links -->
-                <div class="hidden md:flex space-x-8 items-center">
-                    <a href="#how-it-works" class="text-sm text-slate-600 hover:text-slate-900 transition-colors">How It
-                        Works</a>
-                    <a href="#features"
-                        class="text-sm text-slate-600 hover:text-slate-900 transition-colors">Features</a>
-                    <a href="Pricing.html"
-                        class="text-sm text-slate-600 hover:text-slate-900 transition-colors">Pricing</a>
-                </div>
+                <!-- Navigation -->
+                <nav class="hidden md:flex items-center gap-8">
+                    <a href="#" data-scroll="how-it-works"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">How it works</a>
+                    <a href="#" data-scroll="features"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
+                    <a href="#" data-scroll="pricing"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                </nav>
 
-                <!-- Auth / CTA -->
-                <div class="flex items-center gap-3">
-                    <a href="Login.html"
-                        class="hidden md:block text-sm font-medium text-slate-600 hover:text-slate-900 transition-colors">Log
-                        in</a>
+                <!-- Auth Buttons -->
+                <div class="hidden md:flex items-center gap-4">
+                    <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
                     <a href="Signup.html"
-                        class="bg-slate-900 hover:bg-slate-800 text-white text-sm font-medium px-4 py-2 rounded-md shadow-sm transition-all flex items-center gap-2">
-                        <span>Get Started</span>
-                        <span class="iconify" data-icon="lucide:arrow-right" data-width="16"
-                            data-stroke-width="1.5"></span>
+                        class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-slate-900 text-white hover:bg-slate-900/90 h-9 px-4 py-2">
+                        Get Started
                     </a>
                 </div>
+
+                <!-- Mobile Menu Toggle -->
+                <button id="menuToggle" class="md:hidden p-2 text-slate-600">
+                    <span class="iconify" data-icon="lucide:menu" data-width="24"></span>
+                </button>
             </div>
-        </div>
+
+            <!-- Mobile Menu -->
+            <div id="mobileMenu"
+                class="hidden md:hidden absolute top-16 left-0 w-full bg-white border-b border-slate-200 p-4 shadow-lg z-50">
+                <nav class="flex flex-col gap-4">
+                    <a href="#" data-scroll="how-it-works"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">How it works</a>
+                    <a href="#" data-scroll="features"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
+                    <a href="#" data-scroll="pricing"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <hr class="border-slate-100">
+                    <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
+                    <a href="Signup.html"
+                        class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-colors bg-slate-900 text-white hover:bg-slate-900/90 h-9 px-4 py-2">
+                        Get Started
+                    </a>
+                </nav>
+            </div>
     </nav>
 
     <!-- PAGE CONTAINER -->
@@ -117,12 +136,37 @@
         <!-- Views will be injected here by JS -->
     </main>
 
-    <!-- Supabase & App Logic -->
-    <!-- Supabase & App Logic -->
-    <!-- Supabase & App Logic -->
+    <!-- Core Scripts -->
     <script type="module" src="../assets/js/supabase.js"></script>
     <script type="module" src="../assets/js/app.js"></script>
 
+    <!-- Smooth Sroll & Interactions -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            // Smooth Scroll
+            document.querySelectorAll('[data-scroll]').forEach(link => {
+                link.addEventListener('click', e => {
+                    e.preventDefault();
+                    // Close mobile menu if open
+                    document.getElementById('mobileMenu').classList.add('hidden');
+
+                    const id = link.dataset.scroll;
+                    const el = document.getElementById(id);
+                    if (el) el.scrollIntoView({ behavior: 'smooth' });
+                });
+            });
+
+            // Mobile Menu Toggle
+            document.getElementById('menuToggle')?.addEventListener('click', () => {
+                document.getElementById('mobileMenu').classList.toggle('hidden');
+            });
+
+            // "Run Free Audit" Redirect Memory
+            const auditBtns = document.querySelectorAll('a[href="Signup.html"]'); // Assuming Buttons go to Signup for new users, but user asked for "Run a UX Audit" -> Login
+            // Wait, the user said "Run a UX Audit" -> Login. I should check if there is a specific button for that.
+            // I'll leave this script block open to adding more specific handlers if I find the button ID.
+        });
+    </script>
     <script>
         // Simple Hash Router
         const routes = {
