--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -91,8 +91,7 @@
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">How it works</a>
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
-                    <a href="#" data-scroll="pricing"
-                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
                 </nav>
 
                 <!-- Auth Buttons -->
@@ -118,8 +117,7 @@
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">How it works</a>
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
-                    <a href="#" data-scroll="pricing"
-                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
                     <hr class="border-slate-100">
                     <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
                     <a href="Signup.html"
@@ -253,51 +251,48 @@
     <!-- FOOTER (Global) -->
     <footer class="bg-slate-50 border-t border-slate-200 py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-12">
-                <div class="col-span-2 md:col-span-1">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
+                <div>
                     <div class="flex items-center gap-2 mb-4">
                         <div class="w-6 h-6 bg-slate-900 rounded text-white flex items-center justify-center">
                             <span class="iconify" data-icon="lucide:scan-eye" data-width="14"></span>
                         </div>
                         <span class="font-semibold tracking-tight text-slate-900">UX Audit</span>
                     </div>
-                    <p class="text-sm text-slate-500 leading-relaxed">
-                        Automated, professional UX &amp; UI auditing for modern product teams and agencies.
+                    <p class="text-sm text-slate-500 leading-relaxed max-w-sm">
+                        Automated, professional UX & UI auditing for modern product teams and agencies.
                     </p>
                 </div>
                 <div>
                     <h4 class="font-semibold text-sm mb-4">Product</h4>
                     <ul class="space-y-2 text-sm text-slate-500">
                         <li><a href="Pricing.html" class="hover:text-slate-900">Pricing</a></li>
-                        <li><a href="#features" class="hover:text-slate-900">Features</a></li>
                         <li><a href="Dashboard_Homepage.html" class="hover:text-slate-900">Dashboard</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="font-semibold text-sm mb-4">Company</h4>
-                    <ul class="space-y-2 text-sm text-slate-500">
-                        <li><a href="#" class="hover:text-slate-900">About</a></li>
-                        <li><a href="#" class="hover:text-slate-900">Contact</a></li>
-                        <li><a href="#" class="hover:text-slate-900">Blog</a></li>
                     </ul>
                 </div>
                 <div>
                     <h4 class="font-semibold text-sm mb-4">Legal</h4>
                     <ul class="space-y-2 text-sm text-slate-500">
-                        <li><a href="#" class="hover:text-slate-900">Privacy Policy</a></li>
-                        <li><a href="#" class="hover:text-slate-900">Terms of Service</a></li>
+                        <li><a href="Privacy.html" class="hover:text-slate-900">Privacy Policy</a></li>
+                        <li><a href="Terms.html" class="hover:text-slate-900">Terms of Service</a></li>
                     </ul>
                 </div>
             </div>
             <div class="border-t border-slate-200 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
-                <p class="text-xs text-slate-400">© 2023 UX Audit Platform. All rights reserved.</p>
+                <p class="text-xs text-slate-400">&copy; 2026 UX Audit Platform. All rights reserved.</p>
                 <div class="flex gap-4">
-                    <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer" data-icon="lucide:twitter"
-                        data-width="16"></span>
-                    <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer" data-icon="lucide:github"
-                        data-width="16"></span>
-                    <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer" data-icon="lucide:linkedin"
-                        data-width="16"></span>
+                    <a href="https://twitter.com/uxaudit" target="_blank" aria-label="Twitter">
+                        <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer"
+                            data-icon="lucide:twitter" data-width="16"></span>
+                    </a>
+                    <a href="https://instagram.com/uxaudit" target="_blank" aria-label="Instagram">
+                        <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer"
+                            data-icon="lucide:instagram" data-width="16"></span>
+                    </a>
+                    <a href="#" aria-label="LinkedIn">
+                        <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer"
+                            data-icon="lucide:linkedin" data-width="16"></span>
+                    </a>
                 </div>
             </div>
         </div>
