--- a/frontend/pages/Login.html
+++ b/frontend/pages/Login.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Iconify -->
-    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
+    <script src="https://code.iconify.design/3/3.1.1/iconify.min.js"></script>
 
     <!-- Tailwind Config -->
     <script>
@@ -45,8 +45,10 @@
         <div class="sm:mx-auto sm:w-full sm:max-w-md">
             <div class="flex justify-center mb-6">
                 <!-- Link back to landing page -->
-                <a href="/index.html" class="auth-logo">
-                    UX Audit
+                <a href="/index.html" class="logo flex items-center gap-2">
+                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
+                    </span>
+                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
                 </a>
             </div>
             <h2 class="text-center text-2xl font-semibold tracking-tight text-slate-900">Sign in to your account</h2>
