--- a/frontend/pages/Pricing.html
+++ b/frontend/pages/Pricing.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Iconify -->
-    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
+    <script src="https://code.iconify.design/3/3.1.1/iconify.min.js"></script>
 
     <!-- Configuration -->
     <script>
@@ -74,13 +74,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
-                <a href="/index.html" class="flex items-center gap-2 group">
-                    <div
-                        class="w-8 h-8 bg-slate-900 rounded text-white flex items-center justify-center group-hover:scale-105 transition-transform duration-200">
-                        <span class="iconify" data-icon="lucide:scan-eye" data-width="18"
-                            data-stroke-width="1.5"></span>
-                    </div>
-                    <span class="font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
+                <a href="/index.html" class="logo flex items-center gap-2">
+                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
+                    </span>
+                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
                 </a>
 
                 <!-- Navigation -->
