--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Iconify -->
-    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
+    <script src="https://code.iconify.design/3/3.1.1/iconify.min.js"></script>
 
     <!-- Tailwind Config -->
     <script>
@@ -76,13 +76,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
-                <a href="index.html" class="flex items-center gap-2 group">
-                    <div
-                        class="w-8 h-8 bg-slate-900 rounded text-white flex items-center justify-center group-hover:scale-105 transition-transform duration-200">
-                        <span class="iconify" data-icon="lucide:scan-eye" data-width="18"
-                            data-stroke-width="1.5"></span>
-                    </div>
-                    <span class="font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
+                <a href="/index.html" class="logo flex items-center gap-2">
+                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
+                    </span>
+                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
                 </a>
 
                 <!-- Navigation -->
@@ -253,12 +250,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
                 <div>
-                    <div class="flex items-center gap-2 mb-4">
-                        <div class="w-6 h-6 bg-slate-900 rounded text-white flex items-center justify-center">
-                            <span class="iconify" data-icon="lucide:scan-eye" data-width="14"></span>
-                        </div>
-                        <span class="font-semibold tracking-tight text-slate-900">UX Audit</span>
-                    </div>
+                    <a href="/index.html" class="logo flex items-center gap-2 mb-4">
+                        <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
+                        </span>
+                        <span class="logo-text font-semibold tracking-tight text-slate-900">UX Audit</span>
+                    </a>
                     <p class="text-sm text-slate-500 leading-relaxed max-w-sm">
                         Automated, professional UX & UI auditing for modern product teams and agencies.
                     </p>
