--- a/frontend/pages/Pricing.html
+++ b/frontend/pages/Pricing.html
@@ -248,8 +248,11 @@
                 </div>
 
                 <div class="mt-16 border-t border-slate-100 pt-8 text-center">
-                    <p class="text-slate-500 text-sm">Need higher volumes or custom workflows? <a href="#"
-                            class="text-slate-900 font-medium hover:underline">Contact us</a> for agency or enterprise
+                    <p class="text-slate-500 text-sm">Need higher volumes or custom workflows? <a
+                            href="mailto:damilolash@gmail.com?subject=UX%20Audit%20Enterprise%20Inquiry"
+                            class="underline font-medium">
+                            Contact us
+                        </a> for agency or enterprise
                         solutions.</p>
                 </div>
             </div>
