--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -271,6 +271,7 @@
                     <ul class="space-y-2 text-sm text-slate-500">
                         <li><a href="Privacy.html" class="hover:text-slate-900">Privacy Policy</a></li>
                         <li><a href="Terms.html" class="hover:text-slate-900">Terms of Service</a></li>
+                        <li><a href="Refunds.html" class="hover:text-slate-900">Refund Policy</a></li>
                     </ul>
                 </div>
             </div>
