--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -77,9 +77,7 @@
             <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
                 <a href="/index.html" class="logo flex items-center gap-2">
-                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
-                    </span>
-                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
+                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-8 w-auto">
                 </a>
 
                 <!-- Navigation -->
