--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,23 @@
 
 <head>
     <meta http-equiv="refresh" content="0; url=/pages/index.html" />
-    <title>UX Audit</title>
+    <title>UX Audit - AI-Powered User Experience Analysis</title>
+    <meta name="description"
+        content="Get instant, AI-driven insights on your website's User Experience. Improve conversion rates and user satisfaction with actionable feedback.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://uxaudit.com/">
+    <meta property="og:title" content="UX Audit - AI-Powered Analysis">
+    <meta property="og:description" content="Get instant, AI-driven insights on your website's User Experience.">
+    <meta property="og:image" content="https://uxaudit.com/assets/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://uxaudit.com/">
+    <meta property="twitter:title" content="UX Audit - AI-Powered Analysis">
+    <meta property="twitter:description" content="Get instant, AI-driven insights on your website's User Experience.">
+    <meta property="twitter:image" content="https://uxaudit.com/assets/images/og-image.jpg">
 </head>
 
 <body></body>
