--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -87,6 +87,10 @@
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
                     <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="Community.html"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
+                    <a href="Community.html"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                 </nav>
 
                 <!-- Auth Buttons -->
@@ -113,6 +117,8 @@
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
                     <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="Community.html"
+                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                     <hr class="border-slate-100">
                     <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
                     <a href="Signup.html"
