--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -87,9 +87,7 @@
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
                     <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
-                    <a href="Community.html"
-                        class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
-                    <a href="Community.html"
+                    <a href="Community.html" target="_blank"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                 </nav>
 
@@ -117,7 +115,7 @@
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
                     <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
-                    <a href="Community.html"
+                    <a href="Community.html" target="_blank"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                     <hr class="border-slate-100">
                     <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
