--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -280,15 +280,11 @@
             <div class="border-t border-slate-200 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
                 <p class="text-xs text-slate-400">&copy; 2026 UX Audit Platform. All rights reserved.</p>
                 <div class="flex gap-4">
-                    <a href="https://twitter.com/uxaudit" target="_blank" aria-label="Twitter">
-                        <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer"
-                            data-icon="lucide:twitter" data-width="16"></span>
-                    </a>
-                    <a href="https://instagram.com/uxaudit" target="_blank" aria-label="Instagram">
+                    <a href="https://www.instagram.com/tryuxaudit/" target="_blank" aria-label="Instagram">
                         <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer"
                             data-icon="lucide:instagram" data-width="16"></span>
                     </a>
-                    <a href="#" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/company/try-ux-audit/" target="_blank" aria-label="LinkedIn">
                         <span class="iconify text-slate-400 hover:text-slate-600 cursor-pointer"
                             data-icon="lucide:linkedin" data-width="16"></span>
                     </a>
