--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -622,9 +622,7 @@
         <div class="min-h-[calc(100vh-4rem)] flex flex-col justify-center py-12 sm:px-6 lg:px-8 bg-slate-50">
             <div class="sm:mx-auto sm:w-full sm:max-w-md">
                 <div class="flex justify-center mb-6">
-                    <div class="w-10 h-10 bg-slate-900 rounded text-white flex items-center justify-center">
-                        <span class="iconify" data-icon="lucide:scan-eye" data-width="20"></span>
-                    </div>
+                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-10 w-auto">
                 </div>
                 <h2 id="auth-title" class="text-center text-2xl font-semibold tracking-tight text-slate-900">Sign in to
                     your account</h2>
