--- a/frontend/pages/ResetPassword.html
+++ b/frontend/pages/ResetPassword.html
@@ -46,9 +46,7 @@
             <div class="flex justify-center mb-6">
                 <!-- Link back to landing page -->
                 <a href="/index.html" class="logo flex items-center gap-2">
-                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
-                    </span>
-                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
+                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-14 w-auto">
                 </a>
             </div>
             <h2 class="text-center text-2xl font-semibold tracking-tight text-slate-900">Reset your password</h2>
