--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -74,10 +74,11 @@
     <!-- NAVIGATION -->
     <nav class="fixed top-0 w-full z-50 border-b border-slate-200 glass">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-20 items-center">
+            <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
                 <a href="/index.html" class="logo flex items-center gap-2">
-                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-16 w-auto">
+                    <img src="../assets/images/logo.png?v=4" alt="UX Audit" class="h-8 w-auto">
+                    <span class="font-semibold text-xl tracking-tight text-slate-900">UX Audit</span>
                 </a>
 
                 <!-- Navigation -->
@@ -129,7 +130,7 @@
 
     <!-- PAGE CONTAINER -->
     <!-- PAGE CONTAINER -->
-    <main id="app" class="pt-20 min-h-screen">
+    <main id="app" class="pt-16 min-h-screen">
         <!-- Views will be injected here by JS -->
     </main>
 
@@ -253,7 +254,8 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
                 <div>
                     <a href="/index.html" class="logo flex items-center gap-2 mb-4">
-                        <img src="../assets/images/logo.png" alt="UX Audit" class="h-16 w-auto">
+                        <img src="../assets/images/logo.png?v=4" alt="UX Audit" class="h-8 w-auto">
+                        <span class="font-semibold text-xl tracking-tight text-slate-900">UX Audit</span>
                     </a>
                     <p class="text-sm text-slate-500 leading-relaxed max-w-sm">
                         Automated, professional UX & UI auditing for modern product teams and agencies.
@@ -619,8 +621,9 @@
     <template id="tpl-auth">
         <div class="min-h-[calc(100vh-4rem)] flex flex-col justify-center py-12 sm:px-6 lg:px-8 bg-slate-50">
             <div class="sm:mx-auto sm:w-full sm:max-w-md">
-                <div class="flex justify-center mb-6">
-                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-16 w-auto">
+                <div class="flex flex-col items-center justify-center mb-6">
+                    <img src="../assets/images/logo.png?v=4" alt="UX Audit" class="h-12 w-auto mb-4">
+                    <span class="font-semibold text-2xl tracking-tight text-slate-900">UX Audit</span>
                 </div>
                 <h2 id="auth-title" class="text-center text-2xl font-semibold tracking-tight text-slate-900">Sign in to
                     your account</h2>
