Plan, Tag Updates

--- a/frontend/pages/404.html
+++ b/frontend/pages/404.html
@@ -46,7 +46,7 @@
                 <span class="iconify" data-icon="lucide:arrow-left" data-width="16"></span>
                 Go back
             </button>
-            <a href="Dashboard_Homepage.html"
+            <a href="/dashboard"
                 class="inline-flex items-center justify-center gap-2 px-4 py-2.5 bg-slate-900 border border-transparent rounded-lg text-sm font-medium text-white hover:bg-slate-800 transition-colors shadow-sm">
                 <span class="iconify" data-icon="lucide:home" data-width="16"></span>
                 Go to Dashboard
