--- a/frontend/pages/Refunds.html
+++ b/frontend/pages/Refunds.html
@@ -38,7 +38,7 @@
     <!-- Minimal Header -->
     <nav class="border-b border-slate-200 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-            <a href="/index.html" class="flex items-center gap-2 font-semibold text-lg text-slate-900">
+            <a href="/" class="flex items-center gap-2 font-semibold text-lg text-slate-900">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="lucide lucide-scan-eye">
@@ -52,85 +52,19 @@
                 UX Audit
             </a>
             <div class="flex gap-4">
-                <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
-                <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
+                <a href="/pricing" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                <a href="/login" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
             </div>
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <main class="flex-grow py-16 px-4 sm:px-6 lg:px-8">
-        <div class="max-w-3xl mx-auto">
-            <h1 class="text-3xl font-semibold tracking-tight text-slate-900 mb-8">Refund Policy</h1>
-
-            <div class="prose prose-slate prose-sm sm:prose-base max-w-none text-slate-600">
-                <p class="text-sm text-slate-500 mb-8">Last updated: January 2026</p>
-
-                <p class="mb-8">UX Audit aims to be fair, transparent, and predictable about refunds.</p>
-
-                <div class="space-y-10">
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">1. Subscriptions</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Subscription fees are non-refundable once a billing period has started.</li>
-                            <li>You may cancel at any time to avoid future charges.</li>
-                            <li>Cancellation does not retroactively refund the current period.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">2. Credits</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Credit purchases are non-refundable.</li>
-                            <li>Credits never expire.</li>
-                            <li>Credits are consumed only when usage exceeds plan limits.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">3. Failed or Incomplete Audits</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>If an audit fails due to a platform error:</li>
-                            <li class="list-none ml-4">- Credits used for that audit may be restored.</li>
-                            <li class="list-none ml-4">- Please contact support within 7 days of the issue.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">4. Duplicate Charges</h2>
-                        <p>If you are charged multiple times due to a billing error, we will investigate and issue a
-                            refund where appropriate.</p>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">5. How to Request Support</h2>
-                        <p>To report billing issues, contact: <a href="mailto:support@tryuxaudit.com"
-                                class="text-slate-900 font-medium hover:underline">support@tryuxaudit.com</a></p>
-                        <p class="mt-2">Include:</p>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Account email</li>
-                            <li>Date of charge</li>
-                            <li>Description of the issue</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">6. Policy Updates</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>We may update this policy periodically.</li>
-                            <li>Changes take effect immediately upon publication.</li>
-                        </ul>
-                    </section>
-                </div>
-            </div>
-        </div>
-    </main>
+    <!-- ... -->
 
     <!-- Footer -->
     <footer class="border-t border-slate-200 mt-auto bg-white py-8">
         <div class="max-w-7xl mx-auto px-4 flex justify-center gap-8 text-sm text-slate-500">
-            <a href="Terms.html" class="hover:text-slate-900 transition-colors">Terms of Service</a>
-            <a href="Refunds.html" class="hover:text-slate-900 transition-colors">Refund Policy</a>
+            <a href="/terms" class="hover:text-slate-900 transition-colors">Terms of Service</a>
+            <a href="/refunds" class="hover:text-slate-900 transition-colors">Refund Policy</a>
         </div>
     </footer>
 
