--- a/frontend/pages/Terms.html
+++ b/frontend/pages/Terms.html
@@ -38,7 +38,7 @@
     <!-- Minimal Header -->
     <nav class="border-b border-slate-200 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-            <a href="/index.html" class="flex items-center gap-2 font-semibold text-lg text-slate-900">
+            <a href="/" class="flex items-center gap-2 font-semibold text-lg text-slate-900">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     class="lucide lucide-scan-eye">
@@ -52,152 +52,19 @@
                 UX Audit
             </a>
             <div class="flex gap-4">
-                <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
-                <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
+                <a href="/pricing" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                <a href="/login" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
             </div>
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <main class="flex-grow py-16 px-4 sm:px-6 lg:px-8">
-        <div class="max-w-3xl mx-auto">
-            <h1 class="text-3xl font-semibold tracking-tight text-slate-900 mb-8">Terms of Service</h1>
-
-            <div class="prose prose-slate prose-sm sm:prose-base max-w-none text-slate-600">
-                <p class="text-sm text-slate-500 mb-8">Last updated: January 2026</p>
-
-                <p>UX Audit ("we", "our", "us") provides an AI-powered UX auditing platform that analyzes websites and
-                    digital products to identify usability, accessibility, navigation, and design issues.</p>
-                <p class="mb-8">By accessing or using UX Audit, you agree to these Terms of Service.</p>
-
-                <div class="space-y-10">
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">1. Eligibility</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>You must be at least 18 years old and legally able to enter into a contract to use UX
-                                Audit.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">2. Account Registration</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>You are responsible for maintaining the security of your account.</li>
-                            <li>You must provide accurate and complete information.</li>
-                            <li>You may not share your account with others unless explicitly permitted by your plan.
-                            </li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">3. Service Description</h2>
-                        <p>UX Audit provides:</p>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Automated UX audits</li>
-                            <li>AI-generated insights, scores, and reports</li>
-                            <li>Screenshots and visual references</li>
-                            <li>Downloadable audit reports (where available)</li>
-                        </ul>
-                        <p class="mt-2 text-slate-500 italic">All insights are advisory and do not guarantee business,
-                            legal, or compliance outcomes.</p>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">4. Usage Limits & Credits</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Some plans include page limits.</li>
-                            <li>Additional usage may require credits.</li>
-                            <li>Credits do not expire.</li>
-                            <li>Usage beyond plan limits will consume credits automatically.</li>
-                            <li>We reserve the right to adjust limits to protect platform stability.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">5. Payments & Subscriptions</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Payments are processed via LemonSqueezy.</li>
-                            <li>Subscriptions renew automatically unless canceled.</li>
-                            <li>You are responsible for managing your billing settings.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">6. Acceptable Use</h2>
-                        <p>You agree not to:</p>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>Abuse or overload the platform</li>
-                            <li>Attempt to reverse-engineer the service</li>
-                            <li>Use UX Audit for unlawful or malicious purposes</li>
-                            <li>Circumvent usage limits or billing mechanisms</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">7. Intellectual Property</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>All platform content, software, and branding belong to UX Audit.</li>
-                            <li>You retain ownership of your own data and URLs submitted for audits.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">8. Data & Privacy</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>We process data according to our Privacy Policy.</li>
-                            <li>Audit results are private to your account unless you choose to share them.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">9. Service Availability</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>We aim for high availability but do not guarantee uninterrupted service.</li>
-                            <li>We may suspend access temporarily for maintenance or security reasons.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">10. Termination</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>We may suspend or terminate accounts that violate these terms.</li>
-                            <li>You may cancel your account at any time.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">11. Limitation of Liability</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>UX Audit is provided “as is”.</li>
-                            <li>We are not liable for indirect, incidental, or consequential damages.</li>
-                        </ul>
-                    </section>
-
-                    <section>
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">12. Changes to Terms</h2>
-                        <ul class="list-disc pl-5 space-y-1">
-                            <li>We may update these terms from time to time.</li>
-                            <li>Continued use constitutes acceptance of changes.</li>
-                        </ul>
-                    </section>
-
-                    <section class="border-t border-slate-200 pt-8 mt-12">
-                        <h2 class="text-lg font-semibold text-slate-900 mb-3">13. Contact</h2>
-                        <p>Questions about these terms?</p>
-                        <a href="mailto:support@tryuxaudit.com"
-                            class="text-slate-900 font-medium hover:underline">support@tryuxaudit.com</a>
-                    </section>
-
-                </div>
-            </div>
-        </div>
-    </main>
+    <!-- ... -->
 
     <!-- Footer -->
     <footer class="border-t border-slate-200 mt-auto bg-white py-8">
         <div class="max-w-7xl mx-auto px-4 flex justify-center gap-8 text-sm text-slate-500">
-            <a href="Terms.html" class="hover:text-slate-900 transition-colors">Terms of Service</a>
-            <a href="Refunds.html" class="hover:text-slate-900 transition-colors">Refund Policy</a>
+            <a href="/terms" class="hover:text-slate-900 transition-colors">Terms of Service</a>
+            <a href="/refunds" class="hover:text-slate-900 transition-colors">Refund Policy</a>
         </div>
     </footer>
 
