--- a/frontend/pages/Login.html
+++ b/frontend/pages/Login.html
@@ -46,9 +46,7 @@
             <div class="flex justify-center mb-6">
                 <!-- Link back to landing page -->
                 <a href="/index.html" class="logo flex items-center gap-2">
-                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
-                    </span>
-                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
+                    <img src="../assets/images/logo.png?v=5" alt="UX Audit" class="h-12 w-auto">
                 </a>
             </div>
             <h2 class="text-center text-2xl font-semibold tracking-tight text-slate-900">Sign in to your account</h2>
@@ -81,7 +79,7 @@
                         </div>
 
                         <div class="text-sm">
-                            <a href="ResetPassword.html" class="font-medium text-slate-600 hover:text-slate-900">Forgot
+                            <a href="/reset-password" class="font-medium text-slate-600 hover:text-slate-900">Forgot
                                 password?</a>
                         </div>
                     </div>
