--- a/frontend/pages/ResetPassword.html
+++ b/frontend/pages/ResetPassword.html
@@ -45,9 +45,8 @@
         <div class="sm:mx-auto sm:w-full sm:max-w-md">
             <div class="flex justify-center mb-6">
                 <!-- Link back to landing page -->
-                <a href="/index.html" class="logo flex flex-col items-center gap-2">
-                    <img src="../assets/images/logo.png?v=4" alt="UX Audit" class="h-12 w-auto">
-                    <span class="font-semibold text-2xl tracking-tight text-slate-900">UX Audit</span>
+                <a href="/" class="logo flex flex-col items-center gap-2">
+                    <img src="../assets/images/logo.png?v=5" alt="UX Audit" class="h-12 w-auto">
                 </a>
             </div>
             <h2 class="text-center text-2xl font-semibold tracking-tight text-slate-900">Reset your password</h2>
