--- a/frontend/pages/Signup.html
+++ b/frontend/pages/Signup.html
@@ -45,10 +45,8 @@
         <div class="sm:mx-auto sm:w-full sm:max-w-md">
             <div class="flex justify-center mb-6">
                 <!-- Link back to landing page -->
-                <a href="/index.html" class="logo flex items-center gap-2">
-                    <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
-                    </span>
-                    <span class="logo-text font-semibold text-lg tracking-tight text-slate-900">UX Audit</span>
+                <a href="/" class="logo flex items-center gap-2">
+                    <img src="../assets/images/logo.png?v=5" alt="UX Audit" class="h-12 w-auto">
                 </a>
             </div>
             <h2 class="text-center text-2xl font-semibold tracking-tight text-slate-900">Create an account</h2>
