--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -76,9 +76,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
-                <a href="/index.html" class="logo flex items-center gap-2">
-                    <img src="../assets/images/logo.png?v=4" alt="UX Audit" class="h-8 w-auto">
-                    <span class="font-semibold text-xl tracking-tight text-slate-900">UX Audit</span>
+                <a href="/" class="logo flex items-center gap-2">
+                    <img src="../assets/images/logo.png?v=5" alt="UX Audit" class="h-10 w-auto">
                 </a>
 
                 <!-- Navigation -->
@@ -87,15 +86,15 @@
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">How it works</a>
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
-                    <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
-                    <a href="Community.html" target="_blank"
+                    <a href="/pricing" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="/community" target="_blank"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                 </nav>
 
                 <!-- Auth Buttons -->
                 <div class="hidden md:flex items-center gap-4">
-                    <a href="Login.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
-                    <a href="Signup.html"
+                    <a href="/login" class="text-sm font-medium text-slate-600 hover:text-slate-900">Sign in</a>
+                    <a href="/signup"
                         class="inline-flex items-center justify-center rounded-lg text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-slate-900 text-white hover:bg-slate-900/90 h-9 px-4 py-2">
                         Get Started
                     </a>
