Updates to logo and plan title

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -76,8 +76,9 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <!-- Logo -->
+                <!-- Logo -->
                 <a href="/index.html" class="logo flex items-center gap-2">
-                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-8 w-auto">
+                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-16 w-auto">
                 </a>
 
                 <!-- Navigation -->
@@ -253,9 +254,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
                 <div>
                     <a href="/index.html" class="logo flex items-center gap-2 mb-4">
-                        <span class="iconify" data-icon="lucide:scan-eye" data-width="22" data-stroke-width="2">
-                        </span>
-                        <span class="logo-text font-semibold tracking-tight text-slate-900">UX Audit</span>
+                        <img src="../assets/images/logo.png" alt="UX Audit" class="h-10 w-auto">
                     </a>
                     <p class="text-sm text-slate-500 leading-relaxed max-w-sm">
                         Automated, professional UX & UI auditing for modern product teams and agencies.
@@ -585,7 +584,7 @@
                             Most Popular</div>
                         <div class="mb-4">
                             <h3 class="text-lg font-medium text-slate-900">Professional</h3>
-                            <p class="text-sm text-slate-500">For Agencies &amp; Teams</p>
+                            <p class="text-sm text-slate-500">For Growing Teams</p>
                         </div>
                         <div class="mb-6">
                             <span class="text-4xl font-bold tracking-tight">$29</span>
@@ -622,9 +621,7 @@
         <div class="min-h-[calc(100vh-4rem)] flex flex-col justify-center py-12 sm:px-6 lg:px-8 bg-slate-50">
             <div class="sm:mx-auto sm:w-full sm:max-w-md">
                 <div class="flex justify-center mb-6">
-                    <div class="w-10 h-10 bg-slate-900 rounded text-white flex items-center justify-center">
-                        <span class="iconify" data-icon="lucide:scan-eye" data-width="20"></span>
-                    </div>
+                    <img src="../assets/images/logo.png" alt="UX Audit" class="h-16 w-auto">
                 </div>
                 <h2 id="auth-title" class="text-center text-2xl font-semibold tracking-tight text-slate-900">Sign in to
                     your account</h2>
