Add Blog to homepage navbar (desktop + mobile)

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -88,6 +88,7 @@
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
                     <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="/pages/blog.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Blog</a>
                     <a href="Community.html" target="_blank"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                 </nav>
@@ -116,6 +117,7 @@
                     <a href="#" data-scroll="features"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Features</a>
                     <a href="Pricing.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Pricing</a>
+                    <a href="/pages/blog.html" class="text-sm font-medium text-slate-600 hover:text-slate-900">Blog</a>
                     <a href="Community.html" target="_blank"
                         class="text-sm font-medium text-slate-600 hover:text-slate-900">Community</a>
                     <hr class="border-slate-100">
